karnc/tests/fixtures/negative/222_signature_on_cron/src/demo.karn
context demo

actor Hook { auth = Signature(secret = "WH", header = "X-Sig") }

service jobs from cron {
  on schedule("* * * * *") by Hook () -> Effect[Result[(), String]] {
    Ok(())
  }
}
